# Atelier_CMAKE

./: CMakeLists.txt
.github/workflows/: tests.yml
src/: main.c
